--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="./images/pngwing 4.png" alt="">
         </div>
         <div class="game-info">
-            <h1 class="color-texts" style="color:violet">We are Gamer</h1>
+            <h2 class="color-texts" style="color:violet">We are Gamer</h2>
             <p class="texts">An international digital games and entertainment<br>company. We develop, publish and distribute multiplayer<br>mobile games. We reach over 400 million players each<br>month and our audience keeps growing.</p>
             <button class="btn-primary">Know More</button>
             <p class="texts">Our Purpose...</p>
@@ -80,7 +80,7 @@
 <!-- Funny  Vedio Section -->
 <section class="funny-video">
     <div class="funny-video-container">
-        <h1>Online Games <span style="color:violet"> Funny Videos</span></h1>
+        <h2>Online Games <span style="color:violet"> Funny Videos</span></h2>
         <p class="texts">A Collection of Hilarious Videos to Brighten Your Day</p>
         <div class="video-container">
             <div class="video-card">
@@ -244,8 +244,8 @@ and be a part of Gamers bright future, we,d love to hear from you
     
         <div class="social-icons flex">
             <i class="fa-brands fa-twitter"></i>
-            <i class="fa-brands fa-facebook"></i>
-            <i class="fa-brands fa-youtube"></i>
+            <i class="fa-brands fa-facebook" style="background-color: blue;border-radius: 50%;"></i>
+            <i class="fa-brands fa-youtube" style="background-color:red;border-radius: 25%; margin:2px 0"></i>
             <i class="fa-brands fa-linkedin-in"></i>
             <i class="fa-brands fa-instagram"></i>
             <i class="fa-brands fa-apple"></i>
