--- a/index.html
+++ b/index.html
@@ -67,7 +67,7 @@
             <img src="./images/pngwing 4.png" alt="">
         </div>
         <div class="game-info">
-            <h2 class="color-texts" style="color:violet">We are Gamer</h2>
+            <h2>We are Gamer</h2>
             <p class="texts">An international digital games and entertainment<br>company. We develop, publish and distribute multiplayer<br>mobile games. We reach over 400 million players each<br>month and our audience keeps growing.</p>
             <button class="btn-primary">Know More</button>
             <p class="texts">Our Purpose...</p>
@@ -80,7 +80,11 @@
 <!-- Funny  Vedio Section -->
 <section class="funny-video">
     <div class="funny-video-container">
-        <h2>Online Games <span style="color:violet"> Funny Videos</span></h2>
+        <h2>Online Games <span style=" background-image: linear-gradient(rgba(69, 4, 45, 0.959), rgb(237, 45, 218));
+            background-clip: text;
+            color:transparent;">
+            
+            Funny Videos</span></h2>
         <p class="texts">A Collection of Hilarious Videos to Brighten Your Day</p>
         <div class="video-container">
             <div class="video-card">
@@ -118,7 +122,7 @@
 <section class="play-game-instantly">
     <div class="page1 flex">
         <div class="page-1-left">
-            <h2><span style="color:violet">Play Instantly,</span><br>No Downloads<br>No Installs.</h2>
+            <h2><span style="color:#FF42A5;">Play Instantly,</span><br>No Downloads<br>No Installs.</h2>
         <p class="texts">Play games online for free without 
             downloading. Just click the Play button 
             and play instantly in your browser.</p>
@@ -139,7 +143,7 @@
           
         </div>
         <div class="page-2-right">
-            <h2><span style="color:violet">Play Games<br>Online </span>Anywhere,<br>Anytime!</h2>
+            <h2><span style="color:#FF42A5;">Play Games<br>Online </span>Anywhere,<br>Anytime!</h2>
             <p class="texts">PC. dad’s phone, mom’s tablet, or your Chromebook, with Gamer you can play your favorite games online for free, any time, anywhere , on any device</p>
         </div>
     </div>
